--- a/index.html
+++ b/index.html
@@ -112,16 +112,21 @@
 
       <div class="popup">
         <div class="popup__container">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <div class="input">
-          <input type="text" placeholder="Жак-Ив Кусто" class="input__text input__text_type_name">
-          <input type="text" placeholder="Исследователь океана" class="input__text input__text_type_about">
-          <button class="popup__save-btn">
-            Сохранить
-          </button>
+          <svg class="popup__close" width="32" height="32" viewBox="0 0 32 32" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M32 28.8L19.2 16L32 3.2L28.8 0L16 12.8L3.2 0L0 3.2L12.8 16L0 28.8L3.2 32L16 19.2L28.8 32L32 28.8Z"
+              fill="white" />
+          </svg>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <div class="input">
+            <input type="text" placeholder="Жак-Ив Кусто" class="input__text input__text_type_name">
+            <input type="text" placeholder="Исследователь океана" class="input__text input__text_type_about">
+            <button type="submit" class="popup__save-btn">
+              Сохранить
+            </button>
+          </div>
         </div>
       </div>
-    </div>
     </main>
 
     <footer class="footer">
