--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <img class="profile__avatar" src="./images/profile-pic.jpg" alt="Аватар">
         <div class="profile__info">
           <div class="profile__description">
-            <p class="profile__name">Жак-Ив Кусто</p>
-            <p class="profile__about">Исследователь океана</p>
+            <p class="profile__name" id="profile__name">Жак-Ив Кусто</p>
+            <p class="profile__about" id="profile__about">Исследователь океана</p>
           </div>
           <svg class="profile__edit-btn" width="24" height="24" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -111,7 +111,7 @@
       </section>
 
       <div class="popup">
-        <div class="popup__container">
+        <form class="popup__container" name="form">
           <svg class="popup__close" width="32" height="32" viewBox="0 0 32 32" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M32 28.8L19.2 16L32 3.2L28.8 0L16 12.8L3.2 0L0 3.2L12.8 16L0 28.8L3.2 32L16 19.2L28.8 32L32 28.8Z"
@@ -119,13 +119,15 @@
           </svg>
           <h2 class="popup__title">Редактировать профиль</h2>
           <div class="input">
-            <input type="text" placeholder="Жак-Ив Кусто" class="input__text input__text_type_name">
-            <input type="text" placeholder="Исследователь океана" class="input__text input__text_type_about">
+            <input type="text" id="input_name" placeholder="Жак-Ив Кусто" value=""
+              class="input__text input__text_type_name">
+            <input type="text" id="input_about" placeholder="Исследователь океана" value=""
+              class="input__text input__text_type_about">
             <button type="submit" class="popup__save-btn">
               Сохранить
             </button>
           </div>
-        </div>
+          </а>
       </div>
     </main>
 
@@ -134,7 +136,7 @@
     </footer>
 
   </div>
-  <script src="./index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
