--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <img class="profile__avatar" src="./images/profile-pic.jpg" alt="Аватар">
         <div class="profile__info">
           <div class="profile__description">
-            <p class="profile__name" id="profile__name">Жак-Ив Кусто</p>
+            <h1 class="profile__name" id="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__about" id="profile__about">Исследователь океана</p>
           </div>
-          <img class="profile__edit-btn" src="./images/Edit Button.svg" alt="кнопка Редактировать">
+          <img class="profile__edit-btn" src="./images/Edit_Button.svg" alt="кнопка Редактировать">
         </div>
         <div class="profile__add-btn"></div>
       </section>
@@ -33,67 +33,68 @@
         <article class="element">
           <img class="element__pic" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия">
           <div class="element__group">
-            <p class="element__text">Карачаево-Черкессия</p>
+            <h2 class="element__text">Карачаево-Черкессия</h2>
             <img class="element__btn" src="./images/Group.svg" alt="Лайк">
           </div>
         </article>
         <article class="element">
           <img class="element__pic" src="./images/elbrus.jpg" alt="Эльбрус">
           <div class="element__group">
-            <p class="element__text">Гора Эльбрус</p>
+            <h2 class="element__text">Гора Эльбрус</h2>
             <img class="element__btn" src="./images/Group.svg" alt="Лайк">
           </div>
         </article>
         <article class="element">
           <img class="element__pic" src=".//images/dombai.jpg" alt="Домбай">
           <div class="element__group">
-            <p class="element__text">Домбай</p>
+            <h2 class="element__text">Домбай</h2>
             <img class="element__btn" src="./images/Group.svg" alt="Лайк">
           </div>
         </article>
         <article class="element">
           <img class="element__pic" src=".//images/altai.jpg" alt="Алтай">
           <div class="element__group">
-            <p class="element__text">Алтай</p>
+            <h2 class="element__text">Алтай</h2>
             <img class="element__btn" src="./images/Group.svg" alt="Лайк">
           </div>
         </article>
         <article class="element">
           <img class="element__pic" src="./images/crimea.jpg" alt="Крым">
           <div class="element__group">
-            <p class="element__text">Крым</p>
+            <h2 class="element__text">Крым</h2>
             <img class="element__btn" src="./images/Group.svg" alt="Лайк">
           </div>
         </article>
         <article class="element">
           <img class="element__pic" src="./images/siberia.jpg" alt="Сибирь">
           <div class="element__group">
-            <p class="element__text">Сибирь</p>
+            <h2 class="element__text">Сибирь</h2>
             <img class="element__btn" src="./images/Group.svg" alt="Лайк">
           </div>
         </article>
       </section>
 
-      <div class="popup">
-        <form class="popup__container" name="form">
-          <img class="popup__close" src="./images/Close Icon.svg" alt="крестик">
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <div class="input">
-            <input type="text" id="input_name" placeholder="Жак-Ив Кусто" value=""
-              class="input__text input__text_type_name">
-            <input type="text" id="input_about" placeholder="Исследователь океана" value=""
-              class="input__text input__text_type_about">
-            <button type="submit" class="popup__save-btn">
-              Сохранить
-            </button>
-          </div>
-        </form>
-      </div>
     </main>
 
     <footer class="footer">
       <p class="footer__copyright">&#169; 2023. Дмитрий Теременцев</p>
     </footer>
+
+    <div class="popup">
+      <form class="popup__container" name="form">
+        <img class="popup__close" src="./images/Close_Icon.svg" alt="крестик">
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <div class="input">
+          <input type="text" id="input_name" placeholder="" value="Жак-Ив Кусто"
+            class="input__text input__text_type_name">
+          <input type="text" id="input_about" placeholder="" value="Исследователь океана"
+            class="input__text input__text_type_about">
+          <button type="submit" class="popup__save-btn">
+            Сохранить
+          </button>
+        </div>
+      </form>
+    </div>
 
   </div>
   <script src="./scripts/index.js"></script>
