--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       <form class="popup__container" name="form">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input name="input_name" type="text" id="input_name" placeholder="" value="Жак-Ив Кусто"
-          class="input__text input__text_type_name">
-        <input name="input_about" type="text" id="input_about" placeholder="" value="Исследователь океана"
-          class="input__text input__text_type_about">
+        <input class="input__text input__text_type_name" name="input_name" type="text" id="input_name" placeholder=""
+          value="Жак-Ив Кусто">
+        <input class="input__text input__text_type_about" name="input_about" type="text" id="input_about" placeholder=""
+          value="Исследователь океана">
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
