--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Mesto</title>
 </head>
 
-<body>
+<body class="background-color">
   <div class="root">
     <header class="header">
       <img class="header__logo" src="./images/Vector.svg" alt="Лого Место">
@@ -84,10 +84,10 @@
       <form class="popup__container" name="form">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input class="input-text input-text_type_name" name="input_name" type="text" id="input_name" placeholder=""
-          value="Жак-Ив Кусто">
-        <input class="input-text input-text_type_about" name="input_about" type="text" id="input_about" placeholder=""
-          value="Исследователь океана">
+        <input class="input-text input-text_type_name" name="input_name" type="text" id="input_name"
+          placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто">
+        <input class="input-text input-text_type_about" name="input_about" type="text" id="input_about"
+          placeholder="Исследователь океана" value="Исследователь океана">
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
