--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       </section>
 
       <section class="elements">
-        <article class="element">
+      <article class="element">
+          <button type="button" class="element__delete-btn"></button>
           <img class="element__pic" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия">
           <div class="element__group">
             <h2 class="element__text">Карачаево-Черкессия</h2>
@@ -72,13 +73,27 @@
             <button type="button" class="element__btn"></button>
           </div>
         </article>
+
       </section>
 
+
     </main>
+
+    <template id="element-template">
+      <article class="element">
+        <button type="button" class="element__delete-btn"></button>
+        <img class="element__pic" src="" alt="фото">
+        <div class="element__group">
+          <h2 class="element__text"></h2>
+          <button type="button" class="element__btn"></button>
+        </div>
+      </article>
+    </template>
 
     <footer class="footer">
       <p class="footer__copyright">&#169; 2023. Дмитрий Теременцев</p>
     </footer>
+
 
     <div class="popup">
       <form class="popup__container" name="form">
@@ -93,6 +108,7 @@
         </button>
       </form>
     </div>
+
 
   </div>
   <script src="./scripts/index.js"></script>
