--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
 
       <section class="elements">
-      <article class="element">
+      <!--<article class="element">
           <button type="button" class="element__delete-btn"></button>
           <img class="element__pic" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия">
           <div class="element__group">
@@ -73,7 +73,7 @@
             <button type="button" class="element__btn"></button>
           </div>
         </article>
-
+      -->
       </section>
 
 
