like,remove, add popup

--- a/index.html
+++ b/index.html
@@ -30,52 +30,8 @@
       </section>
 
       <section class="elements">
-      <!--<article class="element">
-          <button type="button" class="element__delete-btn"></button>
-          <img class="element__pic" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия">
-          <div class="element__group">
-            <h2 class="element__text">Карачаево-Черкессия</h2>
-            <button type="button" class="element__btn"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__pic" src="./images/elbrus.jpg" alt="Эльбрус">
-          <div class="element__group">
-            <h2 class="element__text">Гора Эльбрус</h2>
-            <button type="button" class="element__btn"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__pic" src=".//images/dombai.jpg" alt="Домбай">
-          <div class="element__group">
-            <h2 class="element__text">Домбай</h2>
-            <button type="button" class="element__btn"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__pic" src=".//images/altai.jpg" alt="Алтай">
-          <div class="element__group">
-            <h2 class="element__text">Алтай</h2>
-            <button type="button" class="element__btn"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__pic" src="./images/crimea.jpg" alt="Крым">
-          <div class="element__group">
-            <h2 class="element__text">Крым</h2>
-            <button type="button" class="element__btn"></button>
-          </div>
-        </article>
-        <article class="element">
-          <img class="element__pic" src="./images/siberia.jpg" alt="Сибирь">
-          <div class="element__group">
-            <h2 class="element__text">Сибирь</h2>
-            <button type="button" class="element__btn"></button>
-          </div>
-        </article>
-      -->
-      </section>
 
+      </section>
 
     </main>
 
@@ -109,6 +65,13 @@
       </form>
     </div>
 
+    <div class="popup-pic">
+      <div class="popup-pic__container">
+      <button type="button" class="popup__close"></button>
+      <img class="popup-pic__foto" src="./images/altai.jpg" alt="фото">
+      <p class="popup-pic__description"></p>
+    </div>
+    </div>
 
   </div>
   <script src="./scripts/index.js"></script>
