--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <div class="popup-pic">
       <div class="popup-pic__container">
-      <button type="button" class="popup__close"></button>
-      <img class="popup-pic__foto" src="./images/altai.jpg" alt="фото">
+      <button type="button" class="popup-pic__close"></button>
+      <img class="popup-pic__photo" src="" alt="фото">
       <p class="popup-pic__description"></p>
     </div>
     </div>
