--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <template id="element-template">
       <article class="element">
         <button type="button" class="element__delete-btn"></button>
-        <img class="element__pic" src="" alt="фото">
+        <img class="element__pic" src="./" alt="фото">
         <div class="element__group">
           <h2 class="element__text"></h2>
           <button type="button" class="element__btn"></button>
@@ -68,7 +68,7 @@
     <div class="popup-pic">
       <div class="popup-pic__container">
       <button type="button" class="popup-pic__close"></button>
-      <img class="popup-pic__photo" src="" alt="фото">
+      <img class="popup-pic__photo" src="./" alt="фото">
       <p class="popup-pic__description"></p>
     </div>
     </div>
