--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 
     <div class="popup popup_edit-info">
+      <button type="button" class="popup__close popup__close_form"></button>
       <form class="popup__container popup__container_edit-info" name="form">
-        <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="input-text input-text_type_name" name="input_name" type="text" id="input_name"
           placeholder="Введите имя" value="/">
@@ -66,8 +66,8 @@
     </div>
 
     <div class="popup popup_add-card">
+      <button type="button" class="popup__close popup__close_form"></button>
       <form class="popup__container  popup__container_add-card" name="form">
-        <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Новое место</h3>
         <input class="input-text input-text_type_place" name="input_place" type="text" id="input_place"
           placeholder="Название" value="">
@@ -81,7 +81,7 @@
 
     <div class="popup popup_open-card">
       <div class="popup__full-pic">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close popup__close_card"></button>
       <img class="popup__photo" src="./" alt="фото">
       <p class="popup__description"></p>
     </div>
