--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
 
     <div class="popup popup_edit-info">
       <button type="button" class="popup__close popup__close_form"></button>
-      <form class="popup__container popup__container_edit-info" name="form">
+      <form class="popup__container popup__container_edit-info" name="form" novalidate>
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="input-text input-text_type_name" name="input_name" type="text" id="input_name"
-          placeholder="Введите имя" value="/">
+          placeholder="Введите имя" value="/" minlength="2" maxlength="40" required>
+          <span class="input-text__error input_name-error"></span>
         <input class="input-text input-text_type_about" name="input_about" type="text" id="input_about"
-          placeholder="О себе" value="/">
+          placeholder="О себе" value="/" minlength="2" maxlength="200" required>
+          <span class="input-text__error input_about_error"></span>
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
@@ -67,12 +69,14 @@
 
     <div class="popup popup_add-card">
       <button type="button" class="popup__close popup__close_form"></button>
-      <form class="popup__container  popup__container_add-card" name="form">
+      <form class="popup__container popup__container_add-card" name="form" novalidate>
         <h3 class="popup__title">Новое место</h3>
         <input class="input-text input-text_type_place" name="input_place" type="text" id="input_place"
-          placeholder="Название" value="">
-        <input class="input-text input-text_type_link" name="input_link" type="text" id="input_link"
-          placeholder="Добавьте ссылку" value="">
+          placeholder="Название" value="" minlength="2" maxlength="30" required>
+          <span class="input-text__error" ></span>
+        <input class="input-text input-text_type_link" name="input_link" type="url" id="input_link"
+          placeholder="Добавьте ссылку" value="" required>
+          <span class="input-text__error" ></span>
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
