--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <span class="input-text__error input_name-error"></span>
         <input class="input-text input-text_type_about" name="input_about" type="text" id="input_about"
           placeholder="О себе" value="/" minlength="2" maxlength="200" required>
-          <span class="input-text__error input_about_error"></span>
+          <span class="input-text__error input_about-error"></span>
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
@@ -73,10 +73,10 @@
         <h3 class="popup__title">Новое место</h3>
         <input class="input-text input-text_type_place" name="input_place" type="text" id="input_place"
           placeholder="Название" value="" minlength="2" maxlength="30" required>
-          <span class="input-text__error" ></span>
+          <span class="input-text__error input_place-error" ></span>
         <input class="input-text input-text_type_link" name="input_link" type="url" id="input_link"
           placeholder="Добавьте ссылку" value="" required>
-          <span class="input-text__error" ></span>
+          <span class="input-text__error input_link-error" ></span>
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
