--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="input-text input-text_type_name" name="input_name" type="text" id="input_name"
           placeholder="Введите имя" value="/" minlength="2" maxlength="40" required>
-        <span class="input-text__error input_name-error"></span>
+        <span class="input_name input_name-error"></span>
         <input class="input-text input-text_type_about" name="input_about" type="text" id="input_about"
           placeholder="О себе" value="/" minlength="2" maxlength="200" required>
-        <span class="input-text__error input_about-error"></span>
+        <span class="input_about input_about-error"></span>
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
@@ -73,10 +73,10 @@
         <h3 class="popup__title">Новое место</h3>
         <input class="input-text input-text_type_place" name="input_place" type="text" id="input_place"
           placeholder="Название" value="" minlength="2" maxlength="30" required>
-        <span class="input-text__error input_place-error"></span>
+        <span class="input_place input_place-error"></span>
         <input class="input-text input-text_type_link" name="input_link" type="url" id="input_link"
           placeholder="Добавьте ссылку" value="" required>
-        <span class="input-text__error input_link-error"></span>
+        <span class="input_link input_link-error"></span>
         <button type="submit" class="popup__save-btn">
           Сохранить
         </button>
