--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="popup popup_edit-info">
       <button type="button" class="popup__close popup__close_form"></button>
-      <form class="popup__container popup__container_edit-info" name="form" novalidate>
+      <form class="popup__container popup__container_edit-info" name="profile_edit_form" novalidate>
         <h3 class="popup__title">Редактировать профиль</h3>
         <input class="input-text input-text_type_name" name="input_name" type="text" id="input_name"
           placeholder="Введите имя" value="/" minlength="2" maxlength="40" required>
@@ -69,7 +69,7 @@
 
     <div class="popup popup_add-card">
       <button type="button" class="popup__close popup__close_form"></button>
-      <form class="popup__container popup__container_add-card" name="form" novalidate>
+      <form class="popup__container popup__container_add-card" name="add_card_form" novalidate>
         <h3 class="popup__title">Новое место</h3>
         <input class="input-text input-text_type_place" name="input_place" type="text" id="input_place"
           placeholder="Название" value="" minlength="2" maxlength="30" required>
@@ -78,7 +78,7 @@
           placeholder="Добавьте ссылку" value="" required>
         <span class="input input_link-error"></span>
         <button type="submit" class="popup__save-btn">
-          Сохранить
+          Создать
         </button>
       </form>
     </div>
