--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
 <body class="body-background">
   <div class="root">
     <header class="header">
-      <img class="header__logo" src="./images/Vector.svg" alt="Лого Место">
+      <img class="header__logo" src="<%=require('./images/Vector.svg')%>" alt="Лого Место">
     </header>
 
     <main class="content">
 
       <section class="profile">
-        <img class="profile__avatar" src="./images/profile-pic.jpg" alt="Аватар">
+        <img class="profile__avatar" src="<%=require('./images/profile-pic.jpg')%>" alt="Аватар">
         <div class="profile__info">
           <div class="profile__description">
             <h1 class="profile__name" id="profile__name">Жак-Ив Кусто</h1>
@@ -90,9 +89,7 @@
         <p class="popup__description"></p>
       </div>
     </div>
-
   </div>
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
